<resources>
    <string name="app_name">FamilyBingo</string>
    <string name="check">Check</string>
    <string name="missed">Missed</string>
    <string name="play_again">Play Again</string>
    <string name="you_scored">You Scored</string>
    <string name="title_text">Family Bingo!</string>
    <string name="new_game_button">New Game</string>
    <string name="load_button">Load Game</string>
    <string name="edit_button">Edit</string>
    <string name="done_button">Done</string>
    <string name="end_game">End game</string>
    <string name="confirm_button">Confirm</string>
    <string name="quote_format">\"%s\"</string>
    <string name="score_format">Current Score: %d</string>
    <string name="family_bingo_logo_desc">Family Bingo logo</string>
    <string name="testing_text">Done setting up: let\'s play!</string>
    <string name="small_test_text">Small test text.</string>
    <string name="placeholder_text">Blank text that shouldn\'t show</string>
    <string name="new_game_title">Give your board a name!</string>
    <string name="confirmButton">Confirm</string>
    <string name="cancelButton">Cancel</string>
    <string name="load_game">Load Game</string>
    <string name="list_item_last_opened">Last opened:</string>
    <string name="list_item_status_title">Status:</string>
    <string name="list_item_score_title">Score:</string>
    <string name="debug_button_1_DBsize">DBsize</string>
    <string name="debug_button_2_thisDBsize">ThisDBsize</string>
    <string name="debug_button_3_nukeDeleteEverything">DELETE ALL</string>
    <string name="debug_button_3_detailsOfLastEntry">Details of last entry</string>
    <string name="game_button_test_text">Game button test text: DebugPrintEntries </string>
    <string name="mark_field_missed">Missed</string>
    <string name="mark_field_correct">Correct</string>
    <string name="score_game_label_text">Score:\u0020</string>
    <string name="game_mark_dialog_unmarked">Normal</string>
    <string name="debug_dialog_temp_text">Replace with GameViewModel</string>
    <string name="delete">Delete</string>
</resources>