<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/fieldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/title_top_margin"
            android:text="@string/debug_dialog_temp_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/dialogCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelButton"/>
                <Button
                    android:id="@+id/dialogUnmarked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_mark_dialog_unmarked"
                    android:theme="@style/UnmarkedButton"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/dialogMissed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mark_field_missed"
                    android:theme="@style/MissedButton"/>

                <Button
                    android:id="@+id/dialogChecked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mark_field_correct"
                    android:theme="@style/GoButton" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>