<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/newGameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_game_title"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelButton" />

        <Button
            android:id="@+id/dialogConfirm"
            android:theme="@style/GoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmButton" />


    </LinearLayout>

</LinearLayout>
