<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/boardSetupEditTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/title_top_margin"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/debug_dialog_temp_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black_text_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:id="@+id/setupEditDialogCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelButton"
                android:layout_marginHorizontal="24dp"/>
            <Button
                android:id="@+id/setupEditDialogConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_button"
                android:theme="@style/GoButton"
                android:layout_marginHorizontal="24dp"/>

        </LinearLayout>

    </LinearLayout>
</layout>