<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/fieldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/title_top_margin"
            android:text="@string/debug_dialog_temp_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black_text_color" />

        <TextView
            android:id="@+id/deleteConfirmationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/title_top_margin"
            android:text="Are you sure you want to delete this game?"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:id="@+id/deleteDialogCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelButton"
                android:layout_marginHorizontal="24dp"/>
            <Button
                android:id="@+id/deleteDialogDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:theme="@style/MissedButton"
                android:layout_marginHorizontal="24dp"/>

        </LinearLayout>

    </LinearLayout>
</layout>